Fix: ajustando animações e adicionando conteudo

--- a/app/language/en.json
+++ b/app/language/en.json
@@ -153,6 +153,12 @@
                 {
                     "title": "Certifications",
                     "meta": "Power BI, DIO, Azure Devops"
+                },
+                {
+                    "title": "Languages",
+                    "meta": "English - C2 Level",
+                    "meta2": "Spanish - B1 Level",
+                    "meta3": "Portuguese - Native speaker"
                 }
             ]
         },
