--- a/app/language/pt.json
+++ b/app/language/pt.json
@@ -159,6 +159,12 @@
                 {
                     "title": "Certificações",
                     "meta": "Power BI, DIO, Azure Devops"
+                },
+                {
+                    "title": "Idiomas",
+                    "meta": "Inglês - Nível C2",
+                    "meta2": "Espanhol - Nível B1",
+                    "meta3": "Português - Nativo"
                 }
             ]
         },
