--- a/app/language/pt.json
+++ b/app/language/pt.json
@@ -90,7 +90,7 @@
             "heading": "$ ls experiencia/",
             "items": [
                 {
-                    "title": "Analista de Sistemas Júnior",
+                    "title": "Analista de Sistemas",
                     "period": "2025 - presente",
                     "description": [
                         {
